Auto commit by Windows batch file ...